# src/app/routes/index.ts
@@ -6,6 +6,7 @@ import { CategoryRoutes } from "../modules/category/category.route";
 import { CartRoutes } from "../modules/cart/cart.route";
 import { OrderRoutes } from "../modules/order/order.route";
 import { RentalRoutes } from "../modules/rental/rental.route";
+import { CertificationRoutes } from "../modules/certifications/certifications.route";
 
 const router = express.Router();
 
@@ -37,6 +38,10 @@ const moduleRoutes = [
   {
     path: "/rentals",
     route: RentalRoutes,
+  },
+  {
+    path: "/certifications",
+    route: CertificationRoutes,
   },
 ];
 
